# agileplus-plugin-core

./: ADR.md  AGENTS.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY_AUDIT.md  SPEC.md  TEST_COVERAGE_MATRIX.md  _typos.toml  clippy.toml  codecov.yml  gitleaks.toml  package.json
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: index.md
docs/.vitepress/: config.ts
src/: error.rs  lib.rs  lifecycle.rs  registry.rs  traits.rs  versioning.rs
