[package]
name = "agileplus-plugin-core"
description = "Core plugin traits and registry for AgilePlus extensibility"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.86"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
